--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,18 @@
 {
-  "name": "JHON Temp Mail",
-  "short_name": "JHON",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#F2F4F8",
-  "theme_color": "#F2F4F8",
-  "description": "Secure Temporary Email by JHON",
-  "icons": [
-    {
-      "src": "https://cdn.odzre.my.id/uvw.jpg",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "https://cdn-icons-png.flaticon.com/512/732/732200.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+    "name": "JHON PRODUCTION - TempMail - Email Sementara",
+    "short_name": "TempMail",
+    "description": "Secure Temporary Email by JHON PRODUCTION",
+    "start_url": "/",
+    "display": "standalone",
+    "background_color": "#F2F4F8",
+    "theme_color": "#111111",
+    "orientation": "portrait",
+    "icons": [
+        {
+            "src": "https://cdn-icons-png.flaticon.com/512/732/732200.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any maskable"
+        }
+    ]
 }
